# mailoperator

./: .gitignore  LICENSE.md  Makefile  PRIVACY_POLICY.md  README.md  operator.py  privacy_policy.md  setup.cfg  setup.py
app/: gmail_api.py  operator.py
gmailoperator/: __init__.py  cli.py  gmail_api.py  gmail_api_utils.py
lib/: __init__.py  gmail_api.py  gmail_api_utils.py
mailoperator/: __init__.py  cli.py  formatters.py  gmail_api.py  gmail_api_utils.py  operations.py
