[metadata]
name = mailoperator
version = attr: mailoperator.__version__
author = You
author_email = francesco.lerro@gmail.com
url = https://github.com/flerro/gmail-operator
description = Perform operations on Gmail messages matching a search string
long_description = file: README.md
long_description_content_type = text/markdown
keywords = gmail, cli
license = MIT License
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    License :: OSI Approved :: MIT License

[options]
packages = find:
zip_safe = False
install_requires =
    cachetools==5.2.0
    certifi==2022.5.18.1
    charset-normalizer==2.0.12
    google-api-core==2.8.1
    google-api-python-client==2.49.0
    google-auth==2.6.6
    google-auth-httplib2==0.1.0
    google-auth-oauthlib==0.5.1
    googleapis-common-protos==1.56.2
    httplib2==0.20.4
    idna==3.3
    oauthlib==3.2.0
    protobuf==3.20.1
    pyasn1==0.4.8
    pyasn1-modules==0.2.8
    pyparsing==3.0.9
    requests==2.27.1
    requests-oauthlib==1.3.1
    rsa==4.8
    six==1.16.0
    uritemplate==4.1.1
    urllib3==1.26.9

[options.entry_points]
console_scripts = 
    mop = mailoperator.cli:run
    
[options.package_data]
* = README.md PRIVACY_POLICY.md